sfdx-source/apex-queue/main/objects/JobRun__c/JobRun__c.object-meta.xml
<CustomObject>
    <description>Stores per-attempt execution logs for queue jobs, including timing, status, and operator-facing messages.</description>
    <label>Job Run</label>
    <nameField>
        <displayFormat>JobRun-{00000000}</displayFormat>
        <label>Job Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>