sfdx-source/apex-queue/main/objects/JobRun__c/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJobId__c</fullName>
    <description>Platform async job id associated with this attempt when the framework can correlate it to a native async execution.</description>
    <inlineHelpText>Used for batch failure telemetry and processor-owned async patterns when an attempt maps to Async Apex.</inlineHelpText>
    <label>Async Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>