sfdx-source/apex-queue/main/objects/JobRun__c/fields/AttemptNumber__c.field-meta.xml
<CustomField>
    <fullName>AttemptNumber__c</fullName>
    <description>1-based attempt number for this run log.</description>
    <inlineHelpText>Attempt count associated with the run record.</inlineHelpText>
    <label>Attempt Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>