sfdx-source/apex-queue/main/objects/JobRun__c/fields/DurationMs__c.field-meta.xml
<CustomField>
    <fullName>DurationMs__c</fullName>
    <description>Attempt duration in milliseconds.</description>
    <inlineHelpText>Elapsed attempt duration in milliseconds.</inlineHelpText>
    <label>Duration Ms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>