sfdx-source/apex-queue/main/objects/JobRun__c/fields/FinishedAt__c.field-meta.xml
<CustomField>
    <fullName>FinishedAt__c</fullName>
    <description>Time the worker finished the attempt.</description>
    <inlineHelpText>Attempt finish time.</inlineHelpText>
    <label>Finished At</label>
    <type>DateTime</type>
</CustomField>