sfdx-source/apex-queue/main/objects/JobRun__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <description>Master queue job that owns this attempt log.</description>
    <inlineHelpText>Parent queue job for this run record.</inlineHelpText>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Runs</relationshipLabel>
    <relationshipName>Runs</relationshipName>
    <type>MasterDetail</type>
</CustomField>