sfdx-source/apex-queue/main/objects/JobRun__c/fields/Message__c.field-meta.xml
<CustomField>
    <description>Human-readable message captured for the attempt.</description>
    <fullName>Message__c</fullName>
    <inlineHelpText>Short attempt log message or summary.</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>