sfdx-source/apex-queue/main/objects/JobRun__c/fields/StartedAt__c.field-meta.xml
<CustomField>
    <fullName>StartedAt__c</fullName>
    <description>Time the worker began the attempt.</description>
    <inlineHelpText>Attempt start time.</inlineHelpText>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>