sfdx-source/apex-queue/main/objects/JobRun__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Outcome status recorded for the job attempt.</description>
    <inlineHelpText>Run outcome such as completed, failed, paused, or deferred.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACTIVE</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>DEFERRED</fullName>
                <label>Deferred</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>PAUSED</fullName>
                <label>Paused</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>